--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.3.0",
-    "nuxt": "3.0.0"
+    "@nuxt/postcss8": "^1.1.3",
+    "autoprefixer": "^10.4.13",
+    "nuxt": "3.0.0",
+    "postcss": "^8.4.20",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.0",
+    "tailwindcss": "^3.2.4"
   }
 }
